Bug 380304 - xea2kmt-all does not map all language directories correctly
Summary: xea2kmt-all does not map all language directories correctly
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-29 08:23 UTC by Ralf Habacker
Modified: 2019-08-29 16:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-05-29 08:23:27 UTC
xea2kmt-all is a tool to convert all available gnucash template account files into kmymoney account template files. Unfortunally some directories used by gnucash does not match the related kmymoney subdirectory e.g. gnucash uses 'da' for danish while kmyoney uses 'dk' or 'cz' do not map 'cs_CZ'. It would be nice if xea2kmt-all would map this differences correctly to reduce the manual required work after running xea2kmt-all.
Comment 1 Ralf Habacker 2017-05-29 10:11:24 UTC
Git commit 778da317b2ee2897435693931676054764df95af by Ralf Habacker.
Committed on 29/05/2017 at 09:06.
Pushed by habacker into branch '4.8'.

Fix "xea2kmt-all does not map all language directories correctly".

The functionality of xea2kmt-all has been integrated into xea2kmt.
Converting all gnucash account template files can be performed by
providing --in-dir and --out-dir command line parameters.
FIXED-IN:4.8.1

Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>

M  +2    -28   contrib/xea2kmt-all
M  +115  -0    tools/xea2kmt.cpp

https://commits.kde.org/kmymoney/778da317b2ee2897435693931676054764df95af