Fix "xea2kmt-all does not map all language directories correctly".

The functionality of xea2kmt-all has been integrated into xea2kmt.
Converting all gnucash account template files can be performed by
providing --in-dir and --out-dir command line parameters.

BUG:380304
FIXED-IN:4.8.1

Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>